crates/gridwell-writer-xlsx/tests/snapshots/snapshots__two-row-groups.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Country</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Value</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t xml:space="preserve">North America</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">USA</t></is></c><c r="B3" t="inlineStr"><is><t xml:space="preserve">1250</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">Canada</t></is></c><c r="B4" t="inlineStr"><is><t xml:space="preserve">420</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr" s="1"><is><t xml:space="preserve">Europe</t></is></c></row>
<row r="6"><c r="A6" t="inlineStr"><is><t xml:space="preserve">Germany</t></is></c><c r="B6" t="inlineStr"><is><t xml:space="preserve">890</t></is></c></row>
<row r="7"><c r="A7" t="inlineStr"><is><t xml:space="preserve">France</t></is></c><c r="B7" t="inlineStr"><is><t xml:space="preserve">610</t></is></c></row>
</sheetData>
<mergeCells count="2"><mergeCell ref="A2:B2"/><mergeCell ref="A5:B5"/></mergeCells>
</worksheet>
